- Added support for whitelists in the rbl plugin.

- Added option to skip the Received header for authenticated connections.

-------------------------------------------------------------------------------
Changes in version 2.12

- Added ability for rbl plugin to capture messages before rejecting them.

- Fixed broken use of -lbg-sysdeps in modules.

- Fixed missing plugin-rbl in installed image.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.11

- Updated for bglibs v2

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.10

- Added new "rbl" plugin, to block messages from IPs in an RBL.

- Added new "queuedir" backend, to save messages to simple files.

- Make sure plugin reset functions get called before exiting.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.01

- Added missing plugin-starttls-ucspi to installed files.

- Added support for limiting the number of messages to plugin-counters.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.00

- This version updates the plugin API to add new features:

  - Capabilities reported by the SMTP EHLO response can be added by
    plugins.

  - Plugins are passed any SMTP parameters given with the sender and
    recipient commands.

  - Plugins can add new commands to the SMTP protocol.
